add preference dark theme

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -15,12 +15,12 @@
 
     <p>
       My journey began with a degree in Computer Engineering from the University of the 
-      Balearic Islands, where I majored in Information Technology. This specialization 
+      Balearic Islands, where I majored in <strong>Information Technology</strong>. This specialization 
       provided me with a deep understanding of both hardware and software technologies 
       essential for managing and developing systems infrastructure, including areas 
       such as operating systems, distributed systems, cloud computing, and cybersecurity. 
-      My final project focused on creating a <strong>Disaster Recovery Plan</strong> in cloud 
-      environments. This project awaked my interest in cloud computing and automation, 
+      My final project focused on creating a Disaster Recovery Plan in cloud 
+      environments. This project awaked my interest in <strong>cloud computing and automation, </strong>
       leading me to explore further in these areas.
     </p>
 
