--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,9 +1,9 @@
 ---
+import SystemIcon from "./icons/System.astro"
 import SunIcon from "./icons/Sun.astro"
 import MoonIcon from "./icons/Moon.astro"
-import SystemIcon from "./icons/System.astro"
 
-const THEMES = ["Light", "Dark", "System"]
+const THEMES = ["System","Light", "Dark"]
 ---
 
 <div class="relative ml-1 mr-1">
@@ -64,7 +64,7 @@ const THEMES = ["Light", "Dark", "System"]
 
   const getThemePreference = () => {
     if (typeof localStorage !== "undefined") {
-      return localStorage.getItem("theme") ?? "system"
+      return localStorage.getItem("theme") ?? "dark"
     }
 
     return window.matchMedia("(prefers-color-scheme: dark)").matches
