--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,7 +4,7 @@ const EXPERIENCIE = [
   {
     date: "Currently...",
     title: "IT Devops",
-    company: "WakkeIT, Bilbao",
+    company: "WakkeIT (Consultancy) for DXC Technologies (Consultancy) at Acciona, Bilbao",
     description:
       "Deploy and configuration of Kubernetes clusters with advanced features. Development of event-based workflow automations using StackStorm and Ansible. Installation, configuration, and administration of applications deployed in containers. Technologies used include StackStorm, Ansible, AWX, Terraform, Kubernetes (EKS, AKS), AWS, Azure, Python, and Conda. Managed service operations using ServiceNow and Jira.",
   },
